# diskos-explorer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml  package-lock.json  package.json  projectNotes.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml
deploy/: README.md  diskos.env.example  srv-diskos-data.mount
notebooks/: Palynology_Plot.ipynb  StrataBugs_Read_Mod.ipynb  Well_Logs.ipynb  XRF-Analysis-PyMCA.ipynb
src/diskos/: __init__.py  boreholes.py  cli.py  config.py  formations.py  geo.py  npd.py  paths.py  publications.py  wells.py
src/diskos/io/: __init__.py  las.py  ocr.py  report.py  stratabugs.py
src/diskos/llm/: __init__.py  client.py  profiles.py
src/diskos/palyno/: __init__.py  aggregate.py  plot.py  reconcile.py  suggest.py  targets.py  taxa.py
src/diskos/web/: __init__.py  analysis.py  api.py  assistant.py  auth.py  corpus.py  graph.py  workflow.py
src/diskos/welllog/: __init__.py  curves.py  plot.py
tests/: conftest.py  test_analysis.py  test_assistant.py  test_boreholes.py  test_build.py  test_corpus.py  test_dossier.py  test_formation_index.py  test_formations.py  test_geo.py  test_graph.py  test_las_header.py  test_llm.py  test_mapdata.py  test_npd.py  test_ocr.py  test_palyno_web.py  test_plot.py  test_publications.py  test_reconcile.py  test_search.py  test_stratabugs.py  test_web.py  test_web_ui.py  test_welllog.py  test_wells.py  test_wiki.py  test_workflow.py  test_xrf.py
web/: README.md
wiki/: index.md  log.md
(+20 files in other folders)
