[project]
name = "diskos"
version = "0.1.0"
description = "Tools for exploring DISKOS petroleum borehole data (palynology, well logs, XRF) and building an LLM wiki over it"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# Deferred to their phases so the Phase 1 backbone stays light and easy to install.
plot = ["matplotlib>=3.7", "openpyxl>=3.1"]   # Phase 2: palynology plots + xlsx tops
welllog = ["lasio>=0.31"]                       # Phase 3: LAS well logs
llm = ["openai>=1.0"]                           # Phase 4: model access
web = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "authlib>=1.3", "itsdangerous>=2.2", "openai>=1.0", "pypdf>=4.0"]  # Phase 5 + assistant
xrf = ["PyMca5>=5.9"]                           # Phase 7: XRF (heavy, kept isolated)

[project.scripts]
diskos = "diskos.cli:app"

[dependency-groups]
# matplotlib/openpyxl are also in the `plot` extra; included here so `uv run
# pytest` exercises the plotting module out of the box.
dev = [
    "pytest>=8.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "lasio>=0.31",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "authlib>=1.3",
    "itsdangerous>=2.2.0",
    "pypdf>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diskos"]
